<resources>
    <string name="app_name">LR1</string>
    <string name="btnCurrencyText">Currency</string>
    <string name="btnWeightText">Weight</string>
    <string name="btnDistanceText">Distance</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn1Text">1</string>
    <string name="btn2Text">2</string>
    <string name="btn3Text">3</string>
    <string name="btn4Text">4</string>
    <string name="btn5Text">5</string>
    <string name="btn6Text">6</string>
    <string name="btn7Text">7</string>
    <string name="btn8Text">8</string>
    <string name="btn9Text">9</string>
    <string name="btn0Text">0</string>
    <string name="btnPointText">.</string>
</resources>