<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnCurrency"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:onClick="onClickCurrency"
        android:text="@string/btnCurrencyText"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnDistance"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:onClick="onClickDistance"
        android:text="@string/btnDistanceText" />

    <Button
        android:id="@+id/btnWeight"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:onClick="onClickWeight"
        android:text="@string/btnWeightText" />
</LinearLayout>